# MaM-RAG

./: .gitignore  docker-compose.yaml  pyproject.toml  test.py  web_ui.py
app/: main.py
app/api/routers/: chat.py  ingest.py
app/compoments/tools/: langchain_tools.py
app/core/: config.py  gprah.py  graph_extract.py  graph_store.py  lightrag.py  rerank.py  router.py  vector.py
app/modules/generation/: answer_generator.py
app/modules/retrieval/: graph_retrieval.py  vector_retrieval.py  web_retrieval.py
app/schemas/: chat.py
app/test/: test_graph_conn.py
scripts/: analyze_question_types.py  analyze_retrieval_quality.py  create_all_split.py  expand_dataset.py  fix_captions.py  fix_neo4j_dataset.py  generate_kg_based_dataset.py  generate_neo4j_dataset.py  simple_kg_dataset.py
tools/: evaluate_hotpotqa.py  evaluate_lenient.py  generate_test_data_from_kg.py  ingest_docling.py  ingest_hotpotqa.py  ingest_mineral_kg.py  ingest_texts.py  load_hotpotqa.py  plot_metrics.py  run_three_evals.py  test_graph_offline.py  test_graph_retrieval.py  test_multihop.py  test_vector_retrieval.py  validate_retrieval.py  verify_graph_api.py
